update-syle_SideBar

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,6 +9,7 @@
     --color-MostazaCybac: #F9A726;
     --text-SizeIcon: 50px;
     --color-AzulSidebar: #EBF7FF;
+    --text-SizeIcon: 34px;
 }
 
 body {
